test/files/pos/t11663/B_2.scala
// scalac: -opt:inline:** -Wopt
class B {
   def bar(c: A) = c.m
}
